--- a/practica1/index.html
+++ b/practica1/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style/styles.css">
     <title>practica1</title>
 </head>
 <body>
-    <div class="barra">
-        <ul class="items">
-            <li>inicio</li>
-            <li>contacto</li>
-            <li>perfil</li>
-            <li>soporte</li>
-        </ul>
-    </div>
+    <header class="contenedor">
+        <img class="logo" src="imagenes/logo.jpeg">
+        <nav class="barra">
+            <ul class="lista">
+                <li class="link active"><a href="#">inicio</a></li>
+                <li class="link"><a href="#">contacto</a></li>
+                <li class="link"><a href="#">soporte</a></li>
+                <li class="link"><a href="#">ayuda</a></li>
+            </ul>
+        </nav>
+    </header>  
+    <section class="seccion-inicio">
+        <h1 class="titulo">cojines</h1>
+        <div class="tarjeta-cojin">
+            <img src="imagenes/foto1.jpeg" class="cojin1-1" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur cumque ab odio nesciunt quaerat minus quisquam? Nesciunt rerum esse fugiat!</p>
+        </div>
+    </section>
 </body>
 </html>
